# DSH-BWM

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
board/: #auto_saved_files#  connectors.kicad_sch  dsh-bwm.dxf  dsh-bwm.kicad_pcb  dsh-bwm.kicad_prl  dsh-bwm.kicad_pro  dsh-bwm.kicad_sch  dsh-bwm_AR-Check.txt  fp-info-cache  fp-lib-table  power.kicad_sch  sym-lib-table
src/: main.rs
